--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <body>
   <div>
-    <img src="logo-white.svg">
+    <img aria-hidden="true" src="logo-white.svg">
     <h1>govdirectory.org</h1>
     <p>Watch this space while <a href="https://ainali.com/">Jan Ainali</a> and <a href="https://byabbe.se/">Albin Larsson</a> think about it.</p>
   </div>
