Add a temporary logo
* Add a temporary logo

Co-authored-by: Abbe98 <albin.post@gmail.com>

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     a {
       color: #fff;
     }
+    
+    img {
+      padding-bottom: 40px;
+    }
 
     @keyframes gradientBG {
       0% {
@@ -68,6 +72,7 @@
 
 <body>
   <div>
+    <img aria-hidden="true" src="logo-white.svg">
     <h1>govdirectory.org</h1>
     <p>Watch this space while <a href="https://ainali.com/">Jan Ainali</a> and <a href="https://byabbe.se/">Albin Larsson</a> think about it.</p>
   </div>
