Add basic footer

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
     img {
       padding-bottom: 40px;
     }
+    
+    footer p {
+      font-weight: 100;
+      font-size: clamp(1rem, 1vw, 1rem);
+    }
 
     @keyframes gradientBG {
       0% {
@@ -75,6 +80,7 @@
     <img aria-hidden="true" src="logo-white.svg">
     <h1>govdirectory.org</h1>
     <p>Watch this space while <a href="https://ainali.com/">Jan Ainali</a> and <a href="https://byabbe.se/">Albin Larsson</a> think about it.</p>
+    <footer><p><a href="https://github.com/govdirectory/landning-page" title="Help improve this site on GitHub">GitHub</a></p></footer>
   </div>
 </body>
 
