updated the github link to point tho the org not repo
As the entire org represents the website and this repository might not be as persistent.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <img aria-hidden="true" src="logo-white.svg">
     <h1>govdirectory.org</h1>
     <p>Watch this space while <a href="https://ainali.com/">Jan Ainali</a> and <a href="https://byabbe.se/">Albin Larsson</a> think about it.</p>
-    <footer><p><a href="https://github.com/govdirectory/landning-page" title="Help improve this site on GitHub">GitHub</a></p></footer>
+    <footer><p><a href="https://github.com/govdirectory" title="Help improve this site on GitHub">GitHub</a></p></footer>
   </div>
 </body>
 
