--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
       font-size: clamp(1rem, 1vw, 1rem);
     }
 
+    .icon-nav a {
+      padding: 10px;
+    }
+
     @keyframes gradientBG {
       0% {
         background-position: 0% 50%
@@ -79,8 +83,15 @@
   <div>
     <img aria-hidden="true" src="logo-white.svg">
     <h1>govdirectory.org</h1>
-    <p>Watch this space while <a href="https://ainali.com/">Jan Ainali</a> and <a href="https://byabbe.se/">Albin Larsson</a> think about it.</p>
-    <footer><p><a href="https://github.com/govdirectory" title="Help improve this site on GitHub">GitHub</a></p></footer>
+    <p>Watch this space while <a href="https://ainali.com/">Jan Ainali</a> and <a href="https://byabbe.se/">Albin Larsson</a> make progress.</p>
+
+    <span class="icon-nav">
+      <a href="https://github.com/govdirectory" title="Help improve this site on GitHub"><img aria-hidden src="thirdparty/octicons/code.svg"/></a>
+      <a href="https://www.wikidata.org/wiki/User:Ainali/Social_media_for_public_organizations" title="Find out more on Wikidata.org"><img aria-hidden src="thirdparty/octicons/note.svg"/></a>
+    </span>
+    <footer>
+      <p>Supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/">Unlock Accelerator</a>.</p>
+    </footer>
   </div>
 </body>
 
