update wikidata url

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <span class="icon-nav">
       <a href="https://github.com/govdirectory" title="Help improve this site on GitHub"><img aria-hidden src="thirdparty/octicons/code.svg"/></a>
-      <a href="https://www.wikidata.org/wiki/User:Ainali/Social_media_for_public_organizations" title="Find out more on Wikidata.org"><img aria-hidden src="thirdparty/octicons/note.svg"/></a>
+      <a href="https://www.wikidata.org/wiki/Wikidata:Gov_Directory" title="Find out more on Wikidata.org"><img aria-hidden src="thirdparty/octicons/note.svg"/></a>
     </span>
     <footer>
       <p>Supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/">Unlock Accelerator</a>.</p>
