--- a/static/about.html
+++ b/static/about.html
@@ -8,10 +8,13 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<ul class="nav">
-  <li><a href="https://govdirectory.org"><img aria-hidden="true" src="logo-white.svg" width="20px">&nbsp;Govdirectory</a></li>
-  <li><a href="https://govdirectory.org/about.html">About</a></li>
-</ul>
+  <nav>
+    <ul class="container">
+      <li><a href="/"><img aria-hidden="true" src="logo-white.svg" width="20px">Govdirectory</a></li>
+      <li><a href="/countries/">Countries</a></li>
+      <li><a href="/about.html">About</a></li>
+    </ul>
+  </nav>
 <div class="splash">
 <div>
 <img aria-hidden="true" src="logo-white.svg" width="150px" class="header-img">
