--- a/static/about.html
+++ b/static/about.html
@@ -15,27 +15,34 @@
       <li><a href="/about.html">About</a></li>
     </ul>
   </nav>
-<div class="splash">
-<div>
-<img aria-hidden="true" src="logo-white.svg" width="150px" class="header-img">
-<h1>Govdirectory</h1>
-    <p>A crowdsourced and fact checked directory of official governmental online accounts and services.</p>
+
+  <div class="splash">
+    <div>
+      <img aria-hidden="true" src="logo-white.svg" width="150px" class="header-img">
+      <h1>Govdirectory</h1>
+      <p>A crowdsourced and fact checked directory of official governmental online accounts and services.</p>
     </div>
-</div>
-<div class="content">
-<h2>Vision</h2>
-<p class="content">Our vision is a world where people are empowered to engage with their government to ensure responsive, inclusive, participatory and representative decision-making at all levels.</p>
-</div>
-<div class="subject">
-<div class="col">
-  <h2>Mission</h2>
-  <p class="subject">We will enable a community powered directory where the online presence of every public organization is easily findable, queryable and trustworthy.</p>
-</div>
-</div>
-<div class="content">
-<h2>Support</h2>
-<p class="content">This project is supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/" class="dark-link">Unlock Accelerator.</a></p>
-</div>
+  </div>
+
+<main>
+  <section>
+    <div class="container center-text">
+      <h2>Vision</h2>
+      <p>Our vision is a world where people are empowered to engage with their government to ensure responsive, inclusive, participatory and representative decision-making at all levels.</p>
+    </div>
+  </section>
+  <section class="bg-grey">
+    <div class="container center-text">
+      <h2>Mission</h2>
+      <p>We will enable a community powered directory where the online presence of every public organization is easily findable, queryable and trustworthy.</p>
+    </div>
+  </section>
+  <section class="container center-text">
+    <h2>Support</h2>
+    <p class="content">This project is supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/" class="dark-link">Unlock Accelerator.</a></p>
+  </section>
+</main>
+
 <footer>
     <div class="footer-table">
       <div class="column">
