refactor splash header
 + enable animation
 + header elm
 + equal padding top/bottom
 + enable prefers-reduced-motion

Side effect:

removed body backgroud causing everything to be blue

--- a/static/about.html
+++ b/static/about.html
@@ -16,13 +16,13 @@
     </ul>
   </nav>
 
-  <div class="splash">
+  <header class="splash">
     <div>
-      <img aria-hidden="true" src="logo-white.svg" width="150px" class="header-img">
+      <img aria-hidden="true" src="logo-white.svg" width="150px">
       <h1>Govdirectory</h1>
       <p>A crowdsourced and fact checked directory of official governmental online accounts and services.</p>
     </div>
-  </div>
+  </header>
 
 <main>
   <section>
