--- a/static/about/index.html
+++ b/static/about/index.html
@@ -6,13 +6,14 @@
   <meta charset="utf-8">
   <title>About Govdirectory</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="canonical" href="https://www.govdirectory.org/about/">
 </head>
 <body>
   <nav>
     <ul class="container">
       <li><a href="/"><img aria-hidden="true" src="logo-white.svg" width="20px">Govdirectory</a></li>
       <li><a href="/countries/">Countries</a></li>
-      <li><a href="/about.html">About</a></li>
+      <li><a href="/about/">About</a></li>
     </ul>
   </nav>
 
@@ -46,16 +47,16 @@
 <footer>
     <div class="footer-table">
       <div class="column">
-        <p class="footer-header"><a href="https://govdirectory.org">Govdirectory</a></p>
+        <p class="footer-header"><a href="/">Govdirectory</a></p>
         <ul class="list-unstyled">
 
-          <li><a href="about.html">About</a></li>
+          <li><a href="/about/">About</a></li>
 
           <li><a href="https://twitter.com/govdirectory">Twitter</a></li>
 
         </ul>
 
-        <p><a href="https://govdirectory.org">
+        <p><a href="/">
             <img class="footer-image" aria-hidden="true" src="logo-white.svg" alt="" width="50px">
           </a>
         </p>
