about page: correct asset links

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width">
   <meta charset="utf-8">
   <title>About Govdirectory</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/main.css">
   <link rel="canonical" href="https://www.govdirectory.org/about/">
 </head>
 <body>
   <nav>
     <ul class="container">
-      <li><a href="/"><img aria-hidden="true" src="logo-white.svg" width="20px">Govdirectory</a></li>
+      <li><a href="/"><img aria-hidden="true" src="/logo-white.svg" width="20px">Govdirectory</a></li>
       <li><a href="/countries/">Countries</a></li>
       <li><a href="/about/">About</a></li>
     </ul>
@@ -19,7 +19,7 @@
 
   <header class="splash">
     <div>
-      <img aria-hidden="true" src="logo-white.svg" width="150px">
+      <img aria-hidden="true" src="/logo-white.svg" width="150px">
       <h1>Govdirectory</h1>
       <p>A crowdsourced and fact checked directory of official governmental online accounts and services.</p>
     </div>
@@ -57,7 +57,7 @@
         </ul>
 
         <p><a href="/">
-            <img class="footer-image" aria-hidden="true" src="logo-white.svg" alt="" width="50px">
+            <img class="footer-image" aria-hidden="true" src="/logo-white.svg" alt="" width="50px">
           </a>
         </p>
       </div>
