--- a/static/index.html
+++ b/static/index.html
@@ -90,7 +90,7 @@
     <span class="icon-nav">
       <a href="https://github.com/govdirectory" title="Help improve this site on GitHub"><img aria-hidden
           src="thirdparty/octicons/code.svg" /></a>
-      <a href="https://www.wikidata.org/wiki/Wikidata:Gov_Directory" title="Find out more on Wikidata.org"><img
+      <a href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory" title="Find out more on Wikidata.org"><img
           aria-hidden src="thirdparty/octicons/note.svg" /></a>
     </span>
     <footer>
