--- a/countries/index.html
+++ b/countries/index.html
@@ -62,7 +62,7 @@
 <main class="container">
     <h1>Countries</h1>
 
-    <ul class="box-list"><li><a href="/denmark/">Denmark</a></li><li><a href="/east-timor/">East Timor</a></li><li><a href="/finland/">Finland</a></li><li><a href="/germany/">Germany</a></li><li><a href="/ghana/">Ghana</a></li><li><a href="/greenland/">Greenland</a></li><li><a href="/netherlands/">Netherlands</a></li><li><a href="/new-zealand/">New Zealand</a></li><li><a href="/norway/">Norway</a></li><li><a href="/philippines/">Philippines</a></li><li><a href="/russia/">Russia</a></li><li><a href="/south-africa/">South Africa</a></li><li><a href="/sweden/">Sweden</a></li><li><a href="/ukraine/">Ukraine</a></li><li><a href="/united-kingdom/">United Kingdom</a></li></ul>
+    <ul class="box-list"><li><a href="/denmark/">Denmark</a></li><li><a href="/east-timor/">East Timor</a></li><li><a href="/finland/">Finland</a></li><li><a href="/germany/">Germany</a></li><li><a href="/ghana/">Ghana</a></li><li><a href="/greenland/">Greenland</a></li><li><a href="/india/">India</a></li><li><a href="/netherlands/">Netherlands</a></li><li><a href="/new-zealand/">New Zealand</a></li><li><a href="/norway/">Norway</a></li><li><a href="/philippines/">Philippines</a></li><li><a href="/russia/">Russia</a></li><li><a href="/south-africa/">South Africa</a></li><li><a href="/sweden/">Sweden</a></li><li><a href="/ukraine/">Ukraine</a></li><li><a href="/united-kingdom/">United Kingdom</a></li></ul>
     <p class="call-out">Would you like to see more countries added? <a href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory">Help us get the data in shape here.</a></p>
 </main>
 
