--- a/germany/Q985/index.html
+++ b/germany/Q985/index.html
@@ -73,7 +73,7 @@
             <div class="infobox">
                 <ul><li>Official website: <a href="https://www.baden-wuerttemberg.de/">www.baden-wuerttemberg.de/</a></li>
                     <li>Phone: <span class="text-grey">[missing data]</span></li>
-                    <li>Led by: Walter Köhler</li>
+                    <li>Led by: Winfried Kretschmann</li>
                     <li>Main regulatory text: <span class="text-grey">[missing data]</span></li>
                 </ul>
                 
